--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,25 +27,51 @@ string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 
+hunter_add_package(Async++)
+find_package(Async++ CONFIG REQUIRED)
+
+hunter_add_package(Boost COMPONENTS program_options)
+find_package(Boost CONFIG REQUIRED program_options)
+
+hunter_add_package(BoostProcess)
+find_package(BoostProcess CONFIG REQUIRED)
+
 # TODO: change template word to project name and delete this comment
 add_library(template STATIC
   # enum your files and delete this comment
-  ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
-)
+  ${CMAKE_CURRENT_SOURCE_DIR}/
+        sources/Process.cpp
+        include/Process.hpp
+        sources/main.cpp)
+
 add_executable(tests
   # TODO: enum your files and delete this comment
   ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-)
+        )
+
+add_executable(builder
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
+        )
 
 # TODO: change template word to project name and delete this comment
 target_include_directories(template
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+
 target_include_directories(tests
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+
+target_include_directories(builder
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+        )
 # TODO: change template word to project name and delete this comment
 target_link_libraries(tests GTest::gtest_main template)
+target_link_libraries(builder
+        Boost::program_options
+        Async++::Async++
+        BoostProcess::boost_process
+        )
 
 enable_testing()
 add_test(NAME unit_tests COMMAND tests)
