--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,17 +95,17 @@ enable_testing()
 add_test(NAME unit_tests COMMAND tests)
 
 if(BUILD_COVERAGE)
-  function(ENABLE_PROJECT_COVERAGE PROJECT)
-    target_compile_options(${PROJECT} PRIVATE --coverage)
-    target_link_libraries(${PROJECT} --coverage)
-    add_coverage(${PROJECT})
-  endfunction()
+  #function(ENABLE_PROJECT_COVERAGE PROJECT)
+   # target_compile_options(${PROJECT} PRIVATE --coverage)
+    #target_link_libraries(${PROJECT} --coverage)
+    #add_coverage(${PROJECT})
+  #endfunction()
 
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(codecov)
   # TODO: change template word to project name and delete this comment
-  enable_project_coverage(template)
+  #enable_project_coverage(template)
   enable_project_coverage(tests)
   list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
   coverage_evaluate()
