--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ if(BUILD_COVERAGE)
   find_package(codecov)
   # TODO: change template word to project name and delete this comment
   #enable_project_coverage(template)
-  enable_project_coverage(tests)
+  #enable_project_coverage(tests)
   list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
   coverage_evaluate()
 endif()
